# protocol-samplePOC

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: app_1763405179987.py  utils_ocr_1763405179985.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  floating-chatbot.tsx
client/src/pages/: analytics.tsx  dashboard.tsx  export.tsx  landing.tsx  tables.tsx  upload.tsx
server/: routes.ts  storage.ts
server/python/: main.py  requirements.txt  table_postprocess.py
shared/: schema.ts
